v1.2.0
- NEW: Social links widget.
- NEW: Excerpt options for Post Layout: Default.
- NEW: Excerpt options for Post Layout: Grid.
- NEW: Additional style options for Post Layout: Grid, like padding and border.
- NEW: Implement template inheritances using template files (via custom `get_template_part` function). Developers could easily override template files from Child Theme.
- NEW: Filter `suki/frontend/meta_avatar_size` to change gravatar size on entry meta.
- TWEAK: Improve dynamic custom CSS generation performance by filtering the CSS array based on the saved theme options only.
- TWEAK: Improve string on post navigation to avoid wrong translation on the "%title" syntax.
- TWEAK: Improve WooCommerce CSS.
- FIX: Header search dropdown bug for not showing on mobile devices.
- FIX: Sub menu overflow bug (remove JS that detects vertical overflow).
- FIX: Minor Customizer CSS since WordPress 5.3.

v1.1.2
- TWEAK: Improve UX of Customizer's builder control: hide add button when there is no available element left.
- FIX: Header menu's underline highlight CSS.
- FIX: Customizer's shadow control doesn't show Color Palette.

v1.1.1
- FIX: Page Header title on date archive pages.
- FIX: Hide content header on archive pages when there is no title or description to display.
- FIX: Page Header CSS on mobile.
- FIX: WooCommerce products grid margin CSS.
- FIX: Full screen mobile header drawer transition CSS.

v1.1.0
- NEW: "Scroll to Top" feature.
- NEW: "Color Palette" feature.
- NEW: Option(s) to change form input typography.
- NEW: Option(s) to enable / disable font smoothing.
- NEW: Option(s) to change full screen mobile header drawer position.
- NEW: Page Header drag & drop layout builder (replace the old layout option).
- NEW: Option(s) to change Page Header title text on post type archive page and taxonomy archive page.
- NEW: Breadcrumb integrations for [Rank Math](https://wordpress.org/plugins/seo-by-rank-math/).