@@ -23,7 +23,7 @@
 // Entry
 .entry {
 	.suki-loop-default & {
-		margin-bottom: 6em;
+		margin-bottom: 6em; // default
 	}
 
 	.suki-loop-grid & {
